--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,7 +15,7 @@ font_size: L
 site_type: Project
 local_business_type: ''
 org_name: ''
-description: 'My project documentation.'
+description: 'Competitive Algorithmic Programming'
 twitter: ''
 
 # Site header
