--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,3 +10,9 @@ main:
   - name: Documentation
     url: docs/
     weight: 20
+  - name: Lectures
+    url: lectures/
+    weight: 30
+  - name: Problem Sets
+    url: problems/
+    weight: 40
