Sieve of Eratosthenes lecture, enabled Mathjax

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,7 +37,7 @@ time_format: '3:04 PM'
 # Site features
 
 highlight: false
-math: false
+math: true
 diagram: false
 privacy_pack: false
 edit_page:
