Arrays and Vectors lecture.

--- a/data/lectures.yaml
+++ b/data/lectures.yaml
@@ -7,3 +7,8 @@ io:
   date: 2022-02-24
   title: IO
   slug: io
+
+arrays-and-vectors:
+  date: 2022-02-26
+  title: Arrays and Vectors
+  slug: arrays-and-vectors
