--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -22,14 +22,20 @@ removePathAccents: true
 
 module:
   imports:
-    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms
-    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy
+    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms/v5
+    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5
     - path: github.com/mattoxb/wowchemy-shortcode-awsvideo
     - path: github.com/mattoxb/wowchemy-shortcode-uva
 
 #####
 ## awsVideo shortcode
 #####
+
+security:
+  funcs:
+    getenv:
+      - ^HUGO_
+      - ^WC_
 
 params:
   awsPath: aws-website-cs-videos-r106h/cs491cap
