--- a/data/lectures.yaml
+++ b/data/lectures.yaml
@@ -17,3 +17,8 @@ stacks-and-queues:
   date: 2022-01-26
   title: Stacks and Queues
   slug: stacks-and-queues
+
+prime-numbers:
+  date: 2022-02-07
+  title: Prime Numbers
+  slug: prime-numbers
