--- a/data/lectures.yaml
+++ b/data/lectures.yaml
@@ -27,3 +27,8 @@ bsts-and-heaps:
   date: 2022-02-09
   title: BSTs and Heaps
   slug: bsts-and-heaps
+
+complete-search:
+  date: 2022-02-14
+  title: Complete search
+  slug: complete-search
