--- a/data/lectures.yaml
+++ b/data/lectures.yaml
@@ -42,3 +42,8 @@ greedy-algorithms:
   date: 2022-02-21
   title: Greedy Algorithms
   slug: greedy-algorithms
+
+dynamic-programming:
+  date: 2022-02-23
+  title: Dynamic Programming
+  slug: dynamic-programming
