--- a/data/lectures.yaml
+++ b/data/lectures.yaml
@@ -67,3 +67,8 @@ apsp:
   date: 2022-03-09
   title: All-pairs Shortest Path
   slug: apsp
+
+union-find:
+  date: 2022-03-21
+  title: Union Find
+  slug: union-find
