--- a/data/lectures.yaml
+++ b/data/lectures.yaml
@@ -112,3 +112,8 @@ convex-hull:
   date: 2022-04-20
   title: Convex Hull
   slug: convex-hull
+
+string-dp:
+  date: 2022-04-25
+  title: String DP
+  slug: string-dp
